unpackaged/main/default/objects/Counseling__c/Counseling__c.object-meta.xml
<CustomObject>
    <label>Counseling</label>
    <nameField>
        <label>Counseling Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Counseling</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>