unpackaged/main/default/objects/Counseling__c/fields/Accepted_College_Applications__c.field-meta.xml
<CustomField>
    <fullName>Accepted_College_Applications__c</fullName>
    <label>Accepted College Applications</label>
    <summaryFilterItems>
        <field>College_Application__c.University_Decision__c</field>
        <operation>equals</operation>
        <value>Accept</value>
    </summaryFilterItems>
    <summaryForeignKey>College_Application__c.Counseling__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>