unpackaged/main/default/objects/Counseling__c/fields/Commitment_Form__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commitment Form</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Counseling_Form__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Commitment Form</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Counseling_Form__c</referenceTo>
    <relationshipLabel>Counseling</relationshipLabel>
    <relationshipName>Counseling</relationshipName>
    <type>Lookup</type>
</CustomField>