unpackaged/main/default/objects/Counseling__c/fields/Commitment_Form_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Form_Date_Time__c</fullName>
    <label>Commitment Form Date/Time</label>
    <type>DateTime</type>
</CustomField>