unpackaged/main/default/objects/Counseling__c/fields/Commitment_Form_Link__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Form_Link__c</fullName>
    <formula>Student_s_Account__r.Commitment_Form_Link__c</formula>
    <label>Commitment Form Link</label>
    <type>Text</type>
</CustomField>