unpackaged/main/default/objects/Counseling__c/fields/Counseling_Status__c.field-meta.xml
<CustomField>
    <fullName>Counseling_Status__c</fullName>
    <label>Counseling Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Outreached</fullName>
            </value>
            <value>
                <fullName>Welcome Call Scheduled</fullName>
            </value>
            <value>
                <fullName>Counselor Research</fullName>
            </value>
            <value>
                <fullName>Student Research &amp; Docs</fullName>
            </value>
            <value>
                <fullName>Applications Sent</fullName>
            </value>
            <value>
                <fullName>Decisions Received</fullName>
            </value>
            <value>
                <fullName>Student Decision-making</fullName>
            </value>
            <value>
                <fullName>Committing</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Waived</fullName>
            </value>
            <value>
                <fullName>Withdrew</fullName>
            </value>
            <value>
                <fullName>Dismissed</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
                <isActive>false</isActive>
                <label>Canceled</label>
            </value>
            <value>
                <fullName>Committed</fullName>
                <isActive>false</isActive>
                <label>Committed</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <isActive>false</isActive>
                <label>In Progress</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>