unpackaged/main/default/objects/Counseling__c/fields/Final_Student_Decision_Status__c.field-meta.xml
<CustomField>
    <fullName>Final_Student_Decision_Status__c</fullName>
    <label>Final Student Decision Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Not Deposited</fullName>
            </value>
            <value>
                <fullName>Deposited</fullName>
            </value>
            <value>
                <fullName>Other Commitment</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
            <value>
                <fullName>Withdrew</fullName>
            </value>
            <value>
                <fullName>Matriculated</fullName>
            </value>
            <value>
                <fullName>Committed - Channel</fullName>
            </value>
            <value>
                <fullName>Committed</fullName>
                <isActive>false</isActive>
                <label>Committed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>