unpackaged/main/default/objects/Counseling__c/fields/Final_Student_Decision_Type__c.field-meta.xml
<CustomField>
    <fullName>Final_Student_Decision_Type__c</fullName>
    <label>Final Student Decision Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Non-Partner</fullName>
            </value>
            <value>
                <fullName>Community College</fullName>
            </value>
            <value>
                <fullName>CC Followed by Partner</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Gap Year</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>