unpackaged/main/default/objects/Counseling__c/fields/Final_Student_Partner__c.field-meta.xml
<CustomField>
    <fullName>Final_Student_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Final Student Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Counseling (Final Student Partner)</relationshipLabel>
    <relationshipName>Counseling1</relationshipName>
    <type>Lookup</type>
</CustomField>