unpackaged/main/default/objects/Counseling__c/fields/Non_Partner_Institutuion__c.field-meta.xml
<CustomField>
    <fullName>Non_Partner_Institutuion__c</fullName>
    <label>Non-Partner Institutuion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>