unpackaged/main/default/objects/Counseling__c/fields/On_Hold_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Follow_Up_Date__c</fullName>
    <label>On Hold Follow Up Date</label>
    <type>Date</type>
</CustomField>