unpackaged/main/default/objects/Counseling__c/fields/On_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Reason__c</fullName>
    <label>On Hold Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>