unpackaged/main/default/objects/Counseling__c/fields/Partner_Matriculation_Semester__c.field-meta.xml
<CustomField>
    <fullName>Partner_Matriculation_Semester__c</fullName>
    <description>Field to capture students that are matriculating to partner universities.</description>
    <inlineHelpText>Represents the first semester that the student will be enrolled at the partner school.</inlineHelpText>
    <label>Partner Matriculation Semester</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spring 2022</fullName>
            </value>
            <value>
                <fullName>Fall 2022</fullName>
            </value>
            <value>
                <fullName>Spring 2023</fullName>
            </value>
            <value>
                <fullName>Fall 2023</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>