unpackaged/main/default/objects/Counseling__c/fields/Pending_University_Decision__c.field-meta.xml
<CustomField>
    <fullName>Pending_University_Decision__c</fullName>
    <label>Pending University Decision</label>
    <summaryFilterItems>
        <field>College_Application__c.University_Decision__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </summaryFilterItems>
    <summaryForeignKey>College_Application__c.Counseling__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>