unpackaged/main/default/objects/Counseling__c/fields/Planning_Form__c.field-meta.xml
<CustomField>
    <fullName>Planning_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Planning Form</label>
    <referenceTo>Counseling_Form__c</referenceTo>
    <relationshipLabel>Counseling (Planning Form)</relationshipLabel>
    <relationshipName>Counseling1</relationshipName>
    <type>Lookup</type>
</CustomField>