unpackaged/main/default/objects/Counseling__c/fields/Planning_Form_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Planning_Form_Date_Time__c</fullName>
    <label>Planning Form Date/Time</label>
    <type>DateTime</type>
</CustomField>