unpackaged/main/default/objects/Counseling__c/fields/Planning_Form_Link__c.field-meta.xml
<CustomField>
    <fullName>Planning_Form_Link__c</fullName>
    <formula>Student_s_Account__r.College_Planning_Form_Link__c</formula>
    <label>Planning Form Link</label>
    <type>Text</type>
</CustomField>