unpackaged/main/default/objects/Counseling__c/fields/Post_Verto_Plans__c.field-meta.xml
<CustomField>
    <fullName>Post_Verto_Plans__c</fullName>
    <label>Post-Verto Plans</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Already Committed To Plans</fullName>
            </value>
            <value>
                <fullName>Wants College Counseling</fullName>
            </value>
            <value>
                <fullName>Needs Decision to Deposit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>