unpackaged/main/default/objects/Counseling__c/fields/Stage_Withdrew_or_Dismissed__c.field-meta.xml
<CustomField>
    <fullName>Stage_Withdrew_or_Dismissed__c</fullName>
    <inlineHelpText>The Counseling stage at which a student was withdrawn or dismissed.</inlineHelpText>
    <label>Stage Withdrew or Dismissed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>