unpackaged/main/default/objects/Counseling__c/fields/Submitted_Applications__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Applications__c</fullName>
    <label>Submitted Applications</label>
    <summaryFilterItems>
        <field>College_Application__c.Submit_To_University__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>College_Application__c.Counseling__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>