unpackaged/main/default/objects/Counseling__c/fields/Total_College_Applications__c.field-meta.xml
<CustomField>
    <fullName>Total_College_Applications__c</fullName>
    <label>Total College Applications</label>
    <summaryForeignKey>College_Application__c.Counseling__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>