unpackaged/main/default/objects/Counseling__c/fields/Unresponsive_Stage__c.field-meta.xml
<CustomField>
    <fullName>Unresponsive_Stage__c</fullName>
    <label>Unresponsive Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Final_Student_Decision_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-departure</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>