unpackaged/main/default/objects/Counseling__c/fields/Welcome_Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Call_Status__c</fullName>
    <label>Welcome Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Counseling_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Scheduled</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>No-Show</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>