unpackaged/main/default/objects/Counseling__c/recordTypes/Channel_Students.recordType-meta.xml
<RecordType>
    <fullName>Channel_Students</fullName>
    <active>true</active>
    <description>Default Record Type for Channel Students</description>
    <label>Channel Students</label>
</RecordType>