unpackaged/main/default/objects/Counseling__c/recordTypes/Direct_Apply.recordType-meta.xml
<RecordType>
    <fullName>Direct_Apply</fullName>
    <active>false</active>
    <description>Default Record Type for Direct Applications</description>
    <label>Direct Apply</label>
</RecordType>