unpackaged/main/default/objects/Counseling__c/recordTypes/Traditional_Counseling.recordType-meta.xml
<RecordType>
    <fullName>Traditional_Counseling</fullName>
    <active>true</active>
    <description>Default Record Type for Traditional Counseling</description>
    <label>Traditional Counseling</label>
</RecordType>