unpackaged/main/default/objects/Counseling__c/recordTypes/Waived_Counseling.recordType-meta.xml
<RecordType>
    <fullName>Waived_Counseling</fullName>
    <active>false</active>
    <description>Default Record Type for Waived Counseling</description>
    <label>Waived Counseling</label>
</RecordType>