unpackaged/main/default/objects/Counseling__c/validationRules/Decision_Call_Status_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Decision_Call_Status_Required</fullName>
    <active>true</active>
    <description>Requires a value for Decision Call Status if the Counseling Status is &#39;Student Decision-making&#39;</description>
    <errorConditionFormula>AND(
    !$User.Bypass_Validation__c,
    ISPICKVAL(Counseling_Status__c, &#39;Student Decision-making&#39;),
    ISBLANK(TEXT(Decision_Call_Status__c))
)</errorConditionFormula>
    <errorDisplayField>Decision_Call_Status__c</errorDisplayField>
    <errorMessage>A Decision Call Status is required.</errorMessage>
</ValidationRule>