unpackaged/main/default/objects/Counseling__c/validationRules/On_Hold_Reason_Follow_Up_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>On_Hold_Reason_Follow_Up_Date_Required</fullName>
    <active>true</active>
    <description>Requires an On Hold Reason and On Hold Follow Up Date if the Counseling Status is &#39;On Hold&#39;</description>
    <errorConditionFormula>AND(
    !$User.Bypass_Validation__c,
    ISPICKVAL(Counseling_Status__c, &#39;On Hold&#39;),
    OR(
        ISBLANK(On_Hold_Reason__c),
        ISBLANK(On_Hold_Follow_Up_Date__c)
    )
)</errorConditionFormula>
    <errorDisplayField>On_Hold_Follow_Up_Date__c</errorDisplayField>
    <errorMessage>An On Hold Reason and On Hold Follow Up Date are required.</errorMessage>
</ValidationRule>