unpackaged/main/default/objects/Counseling__c/validationRules/Welcome_Call_Status_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Welcome_Call_Status_Required</fullName>
    <active>true</active>
    <description>Requires a Welcome Call Status if the Counseling Status is &#39;Welcome Call Scheduled&#39;</description>
    <errorConditionFormula>AND(
    !$User.Bypass_Validation__c,
    ISPICKVAL(Counseling_Status__c, &#39;Welcome Call Scheduled&#39;),
    ISBLANK(TEXT(Welcome_Call_Status__c))
)</errorConditionFormula>
    <errorDisplayField>Welcome_Call_Status__c</errorDisplayField>
    <errorMessage>A Welcome Call Status is required.</errorMessage>
</ValidationRule>