unpackaged/main/default/objects/Counseling__c/listViews/Channel_Students.listView-meta.xml
<ListView>
    <fullName>Channel_Students</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Counseling__c.Channel_Students</value>
    </filters>
    <label>Channel Students</label>
</ListView>