unpackaged/main/default/objects/Counseling__c/listViews/Post_Verto_Plans.listView-meta.xml
<ListView>
    <fullName>Post_Verto_Plans</fullName>
    <columns>Student_s_Account__c</columns>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Post_Verto_Plans__c</field>
        <operation>equals</operation>
        <value>Needs Decision to Deposit</value>
    </filters>
    <label>Post-Verto Plans - NDD</label>
</ListView>