unpackaged/main/default/objects/Counseling__c/listViews/Traditional.listView-meta.xml
<ListView>
    <fullName>Traditional</fullName>
    <columns>NAME</columns>
    <columns>Student_s_Account__c</columns>
    <columns>Counseling_Status__c</columns>
    <columns>Commitment_Form_Date_Time__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Counseling__c.Traditional_Counseling</value>
    </filters>
    <label>Traditional</label>
</ListView>